ParticipantsController Swagger
