# app/Http/Controllers/AuthController.php
@@ -38,6 +38,7 @@ class AuthController extends Controller
  *                 @OA\Property(property="email", type="string"),
  *                 @OA\Property(property="city", type="string"),
  *                 @OA\Property(property="isVerified", type="boolean"),
+ *                 @OA\Property(property="profilePictureURL", type="string"),
  *             ),
  *             @OA\Property(property="accessToken", type="string"),
  *         ),
@@ -86,6 +87,7 @@ class AuthController extends Controller
                 'email' => $user->email,
                 'city' => $user->city,
                 'isVerified' => $user->isVerified,
+                'profilePictureURL' => $user->profilePictureURL,
             ],
             'accessToken' => $token,
         ], 200);
@@ -185,6 +187,7 @@ class AuthController extends Controller
                         'email' => $user->email,
                         'city' => $user->city,
                         'isVerified' => $user->isVerified,
+                        'profilePictureURL' => $user->profilePictureURL,
                     ],
                 ], 401);
             }
